# matrix_matrix_single_file

./: Ariel_Runs_Constant_Core_Num.py  Ariel_Runs_Transposed.py  Ariel_Runs_Transposed_Optimizations.py  Timing_Arie_Runsl.py  debug_make.sh  hpx_sbatch.sbatch  learning.py  make.sh  run.sh  steps.txt  sum.cpp
source/: CMakeLists.txt  main.cpp
